# Upsert

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml
docker/: docker-compose.yml
docker/init/mongodb/: 01-init.js
docker/init/mysql/: 01-init.sql
docker/init/postgres/: 01-init.sql
docker/init/sqlserver/: 01-init.sql
scripts/: download-ollama.sh
seeds/: postgres_seed.sql  setup_sqlserver.ps1  sqlserver_seed.sql
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/appdb/: schema.sql
src-tauri/capabilities/: default.json
src-tauri/src/: appdb.rs  lib.rs  main.rs  ollama.rs  sidecar.rs
src-tauri/src/commands/: appdb.rs  chat.rs  connection.rs  migration.rs  mod.rs  schema.rs
src-tauri/src/db/: comparator.rs  data_comparator.rs  migrator.rs  mod.rs  registry.rs  schema.rs  sql_generator.rs  transformer.rs  type_mapper.rs
src-tauri/src/db/connectors/: cosmosdb.rs  mod.rs  mongodb_connector.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs  sqlserver.rs
src-tauri/src/jobs/: mod.rs
src-tauri/src/security/: audit.rs  credentials.rs  mod.rs  profiles.rs  validation.rs
src-tauri/tests/: live_db_test.rs  migration_test.rs
src/components/chat/: ChatDrawer.tsx
src/components/comparison/: DataDiffViewer.tsx  (+2 more)
src/lib/: chatContext.ts  exportUtils.ts  queryRouter.ts  tauriCommands.ts
src/stores/: chatStore.ts  comparisonStore.ts  connectionStore.ts  migrationStore.ts  settingsStore.ts  tourStore.ts  uiStore.ts
src/types/: comparison.ts
(+25 files in other folders)
