[package]
name = "upsert"
version = "0.1.0"
description = "Cross-platform database comparison and migration tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "upsert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
tauri-plugin-log = "2"
tauri-plugin-stronghold = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
mysql_async = "0.34"
rusqlite = { version = "0.32", features = ["bundled"] }
mongodb = "3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hex = "0.4"
tokio-util = "0.7"
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta = "=2.0.0-rc.22"
tokio-rustls = "0.26"
rustls = "0.23"
